Fixed eyedrop align on full screen.

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header ul * {
 header ul {
   display: table;
   height: inherit;
+  width: 100%;
 }
 
 header ul li {
